syntax = "proto3";

option go_package = "./;notification";

package notification;

service NotificationService {
    rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);  
    rpc CreateNotification (CreateNotificationRequest) returns (Empty);  
    rpc DeleteNotification (DeleteNotificationRequest) returns (Empty);  

    }

    message GetNotificationsRequest {
        int32 user_iD = 1;
    }

    message GetNotificationsResponse {
        repeated Notification notifications = 1;
    }

    message Notification {
        int32 id = 1;
        int32 user_iD = 2;
        int32 event_iD = 3;
        string message = 4;
        string notifyAt = 5;
    }

    message CreateNotificationRequest {
        Notification notification = 1;
    }

    message DeleteNotificationRequest {
        int32 id = 1;
    }

    message Empty{}